--- a/redir/nginx.conf
+++ b/redir/nginx.conf
@@ -4,6 +4,6 @@ events {
 http {
 	server {
 		listen 80;
-		return 301 https://t.me/jsiller_bot?start=$arg_code;
+		return 301 https://t.me/fourtytwo_events_bot?start=$arg_code;
 	}
 }
